# huginn

./: CLAUDE.md  Cargo.toml  Makefile  README.md  dist-workspace.toml
.claude/: settings.local.json
src/: CLAUDE.md  ai_context.rs  app.rs  config.rs  error.rs  event.rs  main.rs  pty.rs  session.rs  summarizer.rs  terminal.rs
src/ui/: CLAUDE.md  config_ui.rs  footer.rs  hud.rs  main_view.rs  mascot.rs  mod.rs
